# apple-calendar-mcp

./: .gitignore  README.ko.md  README.md  preview_app.py  pyproject.toml
scripts/: setup_permissions.py
src/apple_calendar_mcp/: __init__.py  admin.py  calendar_tools.py  eventkit_store.py  extras.py  permissions.py  reminder_tools.py  server.py  tag_tools.py  tags.py  ui_tools.py
tests/: conftest.py  test_integration.py  test_quick_event_parser.py  test_tags.py  test_tools_contract.py
