[project]
name = "apple-calendar-mcp"
version = "0.1.0"
description = "Personal MCP server for Apple Calendar and Reminders via EventKit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.4.4",
    "pyobjc-framework-EventKit>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
]

[project.scripts]
apple-calendar-mcp = "apple_calendar_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_calendar_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/apple_calendar_mcp"]

[tool.hatch.envs.default]
path = ".venv"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "requires_calendar: 실제 Calendar 권한이 있어야 실행",
    "requires_reminders: 실제 Reminders 권한이 있어야 실행",
    "write: 실제 데이터를 변경함. APPLE_CAL_MCP_WRITE_TESTS=1 일 때만 실행",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
